2005-12-11  Anand Babu  <ab@zresearch.com>

	* libfreeipmi/src/defaults-locate.c,h: new files. Re-implemented
	defaults as a fake driver. 
	* libfreeipmi/src/ipmi-locate.c: Changed the driver probing
	order to smbios, acpi, pci and defaults. Added locate_driver_type
	field to locate_info to identify which driver probed the data for
	us.

2005-12-08  Albert Chu  <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-msg-support-cmds.c
	(ipmi_cmd_get_session_challenge2),
	libfreeipmi/src/ipmi-lan-interface.c (fill_hdr_session2): Revert
	buffer length changes from earlier.  Ends up not being necessary.
	
2005-12-08  Albert Chu  <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-msg-support-cmds.c
	(ipmi_cmd_get_session_challenge2): Fix buffer length copying bug.

	* libfreeipmi/src/ipmi-lan-interface.c (fill_hdr_session2): Fix
	buffer length copying bugs.  Fixed incorrect MD2/MD5 calculation
	bugs.
	
2005-12-08  A Balamurugan  <bala@zresearch.com>

	* ipmi-raw/Makefile.am: New file.

	* ipmi-raw/ipmi-raw.8: New file.

	* ipmi-raw/src/Makefile.am: New file.

	* ipmi-raw/src/ipmi-raw-argp.[ch]: New files.

	* ipmi-raw/src/ipmi-raw.c: New file.

	* Makefile.am: Updated.

	* configure.ac: Updated.

	* libfreeipmi/src/ipmi-interface.c (ipmi_cmd_raw): Updated.

	* libfreeipmi/src/ipmi-lan-interface.c (ipmi_lan_cmd_raw2): Added
	new function.

2005-12-08  Albert Chu  <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-debug.c (ipmi_debug): Fix several compile
	bugs when compiling with syslogging or tracing.

2005-12-08  Anand Babu  <ab@zresearch.com>

	* libfreeipmi/src/ipmi-locate.c (ipmi_locate): Now returns default
	settings as a last resort.
	
	* libfreeipmi/src/ipmi-ssif-interface.h:
	Added IPMI_SSIF_SMBUS_SLAVE_ADDR definition.

2005-12-05  Anand Babu  <ab@zresearch.com>

	* fish/extensions/sel.scm: Anand Avati's <avati@zresearch.com>
	patch for bug [#14926 fish assumes user has a home directory].

	* libfreeipmi/src/freeipmi.h: More tests for sys/io.h header