@@ -121,6 +121,29 @@ do {                                                          \
   __FI_FIID_OBJ_GET (bytes, tmpl, field, val)
 #endif
 
+#define __LFI_FIID_OBJ_GET_DATA(bytes, tmpl, field, val, val_len)   \
+do {                                                                \
+    if (fiid_obj_get_data (bytes, tmpl, field, val, val_len) == -1) \
+      return (-1);                                                  \
+} while (0)
+
+#define __FI_FIID_OBJ_GET_DATA(bytes, tmpl, field, val, val_len)     \
+do {                                                                 \
+    if (fiid_obj_get_data (bytes, tmpl, field, &val, val_len) == -1) \
+    {                                                                \
+      err (1, "fiid_obj_get_data (%p, %p, \"%s\", %p) error",        \
+	   bytes, tmpl, field, val);                                 \
+    }                                                                \
+} while (0)
+
+#if defined (FREEIPMI_LIBRARY)                                
+#define FIID_OBJ_GET_DATA(bytes, tmpl, field, val, val_len)  \
+  __LFI_FIID_OBJ_GET_DATA (bytes, tmpl, field, val, val_len)
+#else
+#define FIID_OBJ_GET_DATA(bytes, tmpl, field, val, val_len)  \
+  __FI_FIID_OBJ_GET_DATA (bytes, tmpl, field, val, val_len)
+#endif
+
 #define FIID_OBJ_MEMSET(obj, c, tmpl)                         \
 do {                                                          \
      u_int8_t *__ptr = fiid_obj_memset (obj, c, tmpl);        \
